revision/ec2/ec2/sg.tf
resource "aws_instance" "sg" {
security_groups = aws_security_group.ec2.name

  
}


resource "aws_security_group" "ec2" {
  name = "web-sg"
  description = "Allow ssh and http"

  ingress ={
    description = "allow ssh"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress{
       description = "allow http"
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

   ingress{
       description = "allow custom"
    from_port = 8080
    to_port = 8080
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    env = "Dev"
  }
}
